--- a/frontend/app/app.scss
+++ b/frontend/app/app.scss
@@ -4,6 +4,13 @@ body {
   margin: 0;
   padding: 0;
   background: $color;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
+
+h1, h2, h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
 }
 
 * {
