added components directory, added common styles directory for vars and reusable elements

--- a/frontend/app/app.scss
+++ b/frontend/app/app.scss
@@ -1,9 +1,9 @@
-$color: #F6F6F6;
+@import "./styles/vars";
 
 body {
   margin: 0;
   padding: 0;
-  background: $color;
+  background: $bgColor;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
 }
