--- a/frontend/app/styles/base.scss
+++ b/frontend/app/styles/base.scss
@@ -1,1 +1,18 @@
-@import "../app";
+@import "./vars";
+
+body {
+  margin: 0;
+  padding: 0;
+  background: $bgColor;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+}
+
+h1, h2, h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+}
+
+* {
+  box-sizing: border-box;
+}
