--- a/frontend/app/components/header/header.scss
+++ b/frontend/app/components/header/header.scss
@@ -9,8 +9,16 @@ header {
   align-items: center;
   padding: 0 10px;
 
+  a {
+    margin: 0 20px 0 0;
+  }
+
   .logo {
     display: block;
     height: 26px;
+  }
+
+  .loading {
+    margin: 0 0 0 50px;
   }
 }
