cool refactor and css

--- a/frontend/app/styles/vars.scss
+++ b/frontend/app/styles/vars.scss
@@ -1,2 +1,10 @@
+// Sizes
+$headerSize: 50px;
+
+// Colors
+$white: #ffffff;
+$black: #000000;
+$yellow: #FEFE45;
+
 $bgColor: #F6F6F6;
 $strokeColor: #D1D1D1;
