--- a/frontend/app/components/header/header.scss
+++ b/frontend/app/components/header/header.scss
@@ -1,32 +1,115 @@
 @import "../../styles/vars";
+@import "../../styles/transitions";
 
-header {
-  background: #fff;
+header.header_container {
+  background: $white;
   width: 100%;
   border-bottom: 1px solid $strokeColor;
-  height: 50px;
+  height: $headerSize;
   display: flex;
+  position: relative;
   align-items: center;
   padding: 0 10px;
 
-  a {
-    margin: 0 20px 0 0;
+  .nav {
+    display: block;
+    list-style: none;
+    position: relative;
+    margin: 0 0 0 30px;
+    padding: 0;
+    height: $headerSize;
+
+    li {
+      float: left;
+      margin: 0 25px 0 0;
+      height: $headerSize;
+      display: flex;
+      align-items: stretch;
+
+      a {
+        display: flex;
+        align-items: center;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 13px;
+        text-transform: uppercase;
+        color: rgba($black, .3);
+        position: relative;
+        transition: color .2s ease-in-out;
+
+        &:before {
+          content:'';
+          display: block;
+          position: absolute;
+          width: 100%;
+          height: 0;
+          top: 0;
+          left: 0;
+          background: $black;
+          transition: height .1s ease-in-out;
+        }
+
+        &:hover {
+          color: rgba($black, 1);
+        }
+
+        &.active {
+          color: $black;
+          &:before {
+            height: 3px;
+          }
+        }
+      }
+    }
   }
 
   .logo {
     display: block;
-    height: 26px;
-  }
+    width: 80px;
 
-  .loading {
-    margin: 0 0 0 50px;
-  }
+    .logo_container {
+      display: block;
+      position: relative;
+      width: 26px;
+      height: 26px;
 
-  .nav {
-    list-style: none;
-    
-    li {
-      float: left;
+      .logo_static {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+      }
+
+      .logo_spinning  {
+        display: block;
+        position: absolute;
+        opacity: 0;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        transform-origin: center;
+        animation: spinning 500ms linear infinite;
+        transition: opacity .2s ease-in-out;
+
+        &.show {
+          opacity: 1;
+        }
+      }
+
+      .logo_title {
+        display: block;
+        position: absolute;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+        color: $black;
+        left: 30px;
+        top: -1px;
+        font-size: 13px;
+        line-height: 14px;
+        letter-spacing: .3px;
+      }
     }
   }
 }
