--- a/frontend/app/styles/base.scss
+++ b/frontend/app/styles/base.scss
@@ -1,11 +1,18 @@
 @import "./vars";
 
+html {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
   background: $bgColor;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
+  -webkit-font-smoothing: subpixel-antialiased;
 }
 
 h1, h2, h3 {
@@ -17,7 +24,33 @@ h1, h2, h3 {
   box-sizing: border-box;
 }
 
-
 a {
   text-decoration: none;
+}
+
+#app {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+
+  .app_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    height: 100%;
+
+    .header_container {
+      display: block;
+      height: $headerSize;
+    }
+
+    .app_container {
+      flex-grow: 1;
+      overflow-y: scroll;
+    }
+  }
 }
