--- a/frontend/app/styles/base.scss
+++ b/frontend/app/styles/base.scss
@@ -51,6 +51,12 @@ a {
     .app_container {
       flex-grow: 1;
       overflow-y: scroll;
+      display: flex;
+      align-items: stretch;
+      position: relative;
+
+      .page_container {
+      }
     }
   }
 }
