--- a/frontend/app/styles/elements/button.scss
+++ b/frontend/app/styles/elements/button.scss
@@ -14,6 +14,7 @@
   color: $black;
   transition: background .25s ease-in-out;
   white-space: nowrap;
+  cursor: pointer;
 
   &:after {
     content: '';
