--- a/frontend/app/styles/elements/button.scss
+++ b/frontend/app/styles/elements/button.scss
@@ -15,6 +15,10 @@
   transition: background .25s ease-in-out;
   white-space: nowrap;
   cursor: pointer;
+  border: none;
+  outline: none;
+  text-align: center;
+  justify-content: center;
 
   &:after {
     content: '';
@@ -40,8 +44,18 @@
     background: $buttonActiveBg
   }
 
-  &.button-primary {
+  &.button_primary {
     background: $black;
     color: $white;
+  }
+
+  &.button_big {
+    width: 100%;
+    height: 36px;
+  }
+
+  &.button-small {
+    height: 26px;
+    font-size: 11px;
   }
 }
