--- a/frontend/app/styles/modules.scss
+++ b/frontend/app/styles/modules.scss
@@ -11,3 +11,4 @@
 @import "../pages/browse/index";
 @import "../pages/track/index";
 @import "../pages/auth/signin/index";
+@import "../pages/auth/signup/index";
