--- a/frontend/app/pages/auth/signup/index.scss
+++ b/frontend/app/pages/auth/signup/index.scss
@@ -1,6 +1,6 @@
 @import "../../../styles/vars";
 
-.page_signin {
+.page_signup {
   display: flex;
   position: absolute;
   top: 0;
@@ -13,7 +13,7 @@
 
   .form_container {
     width: 460px;
-    height: 430px;
+    height: 460px;
     background: $white;
     padding: 45px;
     margin-top: -100px;
@@ -64,7 +64,7 @@
     }
 
     .button_submit {
-      margin: 25px 0 25px 0;
+      margin: 30px 0 25px 0;
     }
 
     .forgot_link {
