added youtube OMG

--- a/frontend/app/pages/track/index.scss
+++ b/frontend/app/pages/track/index.scss
@@ -89,7 +89,7 @@
         flex-direction: row;
 
         .channels_info {
-          background: #FAFAFA;
+          background: $grey1;
           border-right: 1px solid $strokeColor;
           width: 200px
         }
