--- a/frontend/app/pages/browse/index.scss
+++ b/frontend/app/pages/browse/index.scss
@@ -12,7 +12,6 @@
   .filters_container {
     width: 600px;
     background: $white;
-    border-right: 1px solid $strokeColor;
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -30,7 +29,7 @@
 
     .filters_section_2 {
       width: 300px;
-      background: $white;
+      background: $grey1;
       border-right: 1px solid $strokeColor;
     }
 
@@ -45,7 +44,6 @@
     flex-grow: 1;
     padding: 20px;
     position: relative;
-    background: $white;
 
     .track_list_container {
       display: block;
@@ -81,7 +79,6 @@
         margin: 0 0 20px 0;
         position: relative;
         z-index: 1;
-        border: 1px solid $strokeColor;
 
         .track_actions {
           height: 30px;
