Validation for add track

--- a/frontend/app/pages/browse/index.scss
+++ b/frontend/app/pages/browse/index.scss
@@ -33,6 +33,11 @@
           display: block;
         }
       }
+
+      .track_form {
+        display: block;
+        margin: 30px 0 30px;
+      }
     }
 
     .filters_section_2 {
