--- a/frontend/app/pages/track/index.scss
+++ b/frontend/app/pages/track/index.scss
@@ -64,6 +64,7 @@
       height: 100%;
       background: $white;
       border-right: 1px solid $strokeColor;
+      overflow-y: scroll;
 
       .track_metadata {
         padding: 20px 10px ;
