--- a/frontend/app/styles/vars.scss
+++ b/frontend/app/styles/vars.scss
@@ -8,9 +8,11 @@ $yellow: #FEFE45;
 $grey: #E8E8E8;
 $grey1: #FAFAFA;
 $red: #D62B2B;
+$green: #48C765;
 
 $bgColor: #F6F6F6;
-$strokeColor: #D1D1D1;
+// $strokeColor: #D1D1D1;
+$strokeColor: #DFDFDF;
 
 // Default Button
 $buttonBg: #F3F3F3;
