--- a/frontend/app/pages/track/new.scss
+++ b/frontend/app/pages/track/new.scss
@@ -29,11 +29,28 @@
       justify-content: center;
       align-items: center;
       flex-direction: column;
-
+      z-index: 100;
+      background: rgba($bgColor, .85);
 
       h1 {
         font-size: 46px;
         margin: -40px 0 10px 0;
+      }
+    }
+
+    .results_container {
+      display: flex;
+      align-items: flex-start;
+      position: relative;
+      z-index: 1;
+
+      .track_metadata_container {
+        width: 700px;
+        background: $white;
+        margin: 20px 0 20px 20px;
+        box-shadow: 0px 4px 19px 0px rgba(224,224,224,0.50);
+        flex-grow: 0;
+        padding: 20px;
       }
     }
   }
