--- a/frontend/app/styles/modules.scss
+++ b/frontend/app/styles/modules.scss
@@ -13,5 +13,6 @@
 @import "../pages/track/new";
 @import "../pages/track/components/track_search_form";
 @import "../pages/track/components/youtube_search_results";
+@import "../pages/track/components/beatport_search_results";
 @import "../pages/auth/signin/index";
 @import "../pages/auth/signup/index";
