--- a/frontend/app/pages/track/new.scss
+++ b/frontend/app/pages/track/new.scss
@@ -17,7 +17,6 @@
     left: 0;
     right: 0;
     bottom: 0;
-    overflow-y: scroll;
 
     .initial_state {
       position: absolute;
@@ -40,17 +39,26 @@
 
     .results_container {
       display: flex;
-      align-items: flex-start;
       position: relative;
       z-index: 1;
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      align-items: stretch;
 
       .track_metadata_container {
-        width: 700px;
         background: $white;
-        margin: 20px 0 20px 20px;
+        margin: 20px 0 0 20px;
         box-shadow: 0px 4px 19px 0px rgba(224,224,224,0.50);
-        flex-grow: 0;
+        flex-grow: 1;
         padding: 20px;
+      }
+
+      .search_results_container {
+        display: flex;
+        flex-grow: 0
       }
     }
   }
