--- a/frontend/app/pages/track/components/beatport_search_results.scss
+++ b/frontend/app/pages/track/components/beatport_search_results.scss
@@ -20,6 +20,16 @@
     .beatport_track_list {
       margin: 0 0 20px 0;
 
+      &.track_selected {
+        li {
+          border: 3px solid $grey1;
+          background: $grey1;
+
+          &:hover {
+          }
+        }
+      }
+
 
       li.beatport_track_item {
         display: block;
@@ -29,6 +39,31 @@
         border: 3px solid $white;
         box-shadow: 0px 1px 0px 0px rgba(189,189,189,0.50);
         margin: 0 0 1px 0;
+
+        .owns_label, .name_match_label {
+          display: none;
+          color: $green;
+          font-family: 'Roboto', sans-serif;
+          font-weight: 400;
+          font-size: 13px;
+          margin: 5px 0 0 0;
+        }
+
+        &.owns {
+          .owns_label {
+            display: block;
+          }
+        }
+        &.name_match {
+          .name_match_label {
+            display: block;
+          }
+        }
+
+        &.selected_track {
+          background: $white;
+          border: 3px solid $green;
+        }
       }
     }
   }
