track metadata form

--- a/frontend/app/pages/track/new.scss
+++ b/frontend/app/pages/track/new.scss
@@ -54,6 +54,7 @@
         box-shadow: 0px 4px 19px 0px rgba(224,224,224,0.50);
         flex-grow: 1;
         padding: 20px;
+        overflow-y: scroll;
       }
 
       .search_results_container {
