--- a/frontend/app/styles/elements/input.scss
+++ b/frontend/app/styles/elements/input.scss
@@ -16,6 +16,7 @@ input.input {
   font-weight: 300;
   font-size: 14px;
   height: 40px;
+  background: $white;
   border-bottom: 1px solid rgba($black, .1);
 
   &:focus {
@@ -26,10 +27,10 @@ input.input {
     display: none;
   }
 
-  &:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0px 1000px white inset;
-    color: #cacaca;
-  }
+  // &:-webkit-autofill {
+  //   -webkit-box-shadow: 0 0 0px 1000px white inset;
+  //   color: #cacaca;
+  // }
 
   &.input_big {
     font-size: 16px;
