--- a/frontend/app/styles/vars.scss
+++ b/frontend/app/styles/vars.scss
@@ -7,17 +7,34 @@ $black: #000000;
 $yellow: #FEFE45;
 $grey: #E8E8E8;
 $grey1: #FAFAFA;
+$grey2:  #F3F3F3;
+$grey3: #E4E4E4;
 $red: #D62B2B;
 $green: #48C765;
+
+
 
 $bgColor: #F6F6F6;
 // $strokeColor: #D1D1D1;
 $strokeColor: #DFDFDF;
 
+// //inverted:
+// $white: #000000;
+// $black: #ffffff;
+// $yellow: #FEFE45;
+// $grey: #505050;
+// $grey1: #202020;
+// $grey1: #303030;
+// $grey2:  #404040;
+// $red: #D62B2B;
+// $green: #48C765;
+// $bgColor: #363636;
+// $strokeColor: #414141;
+
 // Default Button
-$buttonBg: #F3F3F3;
+$buttonBg: $grey2;
 $buttonHoverBg: $grey;
-$buttonActiveBg: #E4E4E4;
+$buttonActiveBg: $grey3;
 
 // Seconday Button
 $buttonSecondaryBg: $grey;
