--- a/frontend/app/styles/elements/button.scss
+++ b/frontend/app/styles/elements/button.scss
@@ -48,6 +48,7 @@
   &.button_primary {
     background: $black;
     color: $white;
+    box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
   }
 
   &.button_big {
