--- a/frontend/app/styles/elements/button.scss
+++ b/frontend/app/styles/elements/button.scss
@@ -56,6 +56,12 @@
     height: 36px;
   }
 
+  &.button_large {
+    width: 100%;
+    height: 36px;
+    font-size: 14px;
+  }
+
   &.button-small {
     height: 26px;
     font-size: 11px;
