--- a/frontend/app/pages/track/components/track_metadata.scss
+++ b/frontend/app/pages/track/components/track_metadata.scss
@@ -38,6 +38,7 @@
         }
       }
     }
+
     .track_metadata_beatport {
       margin: 30px 0 0 0;
       display: flex;
@@ -111,6 +112,70 @@
           border-right: 1px solid rgba($black, .1);
           right: -16px;
           top: -2px;
+        }
+      }
+    }
+
+    .video_player_container {
+      border:1px solid $strokeColor;
+      padding: 15px;
+      display: flex;
+      justify-content: space-between;
+
+      h1 {
+        display: block;
+        font-size: 13px;
+        margin: 0 0 20px 0;
+        opacity: .2;
+      }
+
+      .selected_video_label {
+        font-size: 11px;
+        opacity: .4;
+        margin: 0 0 10px 0;
+      }
+
+      .youtube_video_title {
+        font-size: 13px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+      }
+
+      .published_by {
+        font-size: 11px;
+        display: block;
+        margin: 3px 0 0 0;
+
+        span {
+          font-weight: 500
+        }
+      }
+
+      .youtube_video_statistics {
+        display: block;
+        margin: 20px 0 0 0;
+
+        li {
+          float: left;
+          font-size: 14px;
+          margin: 0 12px 2px 0;
+
+          &.views {
+            font-weight: 500;
+          }
+        }
+      }
+
+      .youtube_url {
+        display: block;
+        margin: 10px 0 20px 0 ;
+        font-size: 13px;
+        color: $black;
+        opacity: .3;
+        transition: opacity .2s ease-in-out;
+
+        &:hover {
+          opacity: 1;
         }
       }
     }
