--- a/frontend/app/pages/track/components/track_metadata.scss
+++ b/frontend/app/pages/track/components/track_metadata.scss
@@ -20,7 +20,7 @@
     .track_metadata_header {
       display: flex;
       justify-content: space-between;
-      margin: 10px 0 0 0;
+      margin: 10px 0 30px 0;
 
       .track_metadata_header_text {
         h1.track_metadata_title {
@@ -28,7 +28,7 @@
           margin: 0 0 5px 0;
         }
         p.track_metadata_description {
-          font-size: 11px;
+          font-size: 12px;
         }
       }
       .track_metadata_header_action {
@@ -40,7 +40,7 @@
     }
 
     .track_metadata_beatport {
-      margin: 30px 0 0 0;
+      margin: 0 0 0 0;
       display: flex;
 
       .cover_container {
@@ -176,6 +176,59 @@
 
         &:hover {
           opacity: 1;
+        }
+      }
+    }
+
+    .track_metadata_form {
+      margin: 20px 0 20px 0;
+      border:1px solid $strokeColor;
+      padding: 15px;
+
+      h1 {
+        display: block;
+        font-size: 13px;
+        margin: 0 0 20px 0;
+      }
+
+      .track_metadata_form_container {
+        display: block;
+
+        form {
+          .input_container {
+            float: left;
+            width: 48%;
+            margin-right: 4%;
+
+            &:nth-child(2n) {
+              margin-right: 0
+            }
+
+            label {
+              font-size: 12px;
+              opacity: .5;
+            }
+
+            input {
+              height: 30px;
+              font-weight: 400;
+            }
+          }
+          &:after {
+            content: '';
+            clear: both;
+            display: block;
+          }
+
+          .button {
+            display: block;
+            clear: both;
+            width: 100%;
+            margin: 0 0 20px 0;
+            position: relative;
+            top: 10px;
+            height: 44px;
+          }
         }
       }
     }
