--- a/frontend/app/styles/modules.scss
+++ b/frontend/app/styles/modules.scss
@@ -14,11 +14,14 @@
 @import "../pages/landing/index";
 @import "../pages/browse/index";
 @import "../pages/track/index";
-@import "../pages/track/new";
-@import "../pages/track/components/track_search_form";
-@import "../pages/track/components/track_search_results";
-@import "../pages/track/components/track_metadata";
-@import "../pages/track/components/youtube_search_results";
-@import "../pages/track/components/beatport_search_results";
+
 @import "../pages/auth/signin/index";
 @import "../pages/auth/signup/index";
+
+// Page - /new/
+@import "../pages/track/new";
+@import "../pages/track/new/track_search_form";
+@import "../pages/track/new/track_search_results";
+@import "../pages/track/new/track_metadata";
+@import "../pages/track/new/youtube_search_results";
+@import "../pages/track/new/beatport_search_results";
