--- a/frontend/app/pages/track/index/track_sidebar.scss
+++ b/frontend/app/pages/track/index/track_sidebar.scss
@@ -9,11 +9,89 @@
   flex-shrink: 0;
 
   .track_metadata {
-    padding: 20px 10px ;
+    display: flex;
+    margin: 15px;
 
-    .meta_block {
-      display: block;
-      margin: 0 0 20px 0;
+    .cover_container {
+      width: 70px;
+      height: 70px;
+      flex-shrink: 0;
+      margin: 0 15px 0 0;
+
+      img {
+        width: 100%;
+        box-shadow: 0px 2px 9px 0px rgba($black, 0.15);
+      }
     }
+
+    .main_info_container {
+      flex-grow: 1;
+      margin: 3px 0 0 0;
+      line-height: 22px;
+
+      .artist_name {
+        font-size: 16px;
+        font-weight: 600;
+      }
+
+      .track_name {
+        font-size: 14px;
+        font-weight: 300;
+      }
+
+      .label_name {
+        font-size: 14px;
+        font-weight: 600;
+        opacity: .25;
+      }
+    }
+  }
+
+  .track_info {
+    display: block;
+    margin: 0 15px 15px 15px;
+
+    h1 {
+      font-size: 13px;
+      padding: 0 0 10px 0;
+      margin: 0 0 10px 0;
+      border-bottom: 1px solid rgba($strokeColor, .5);
+      display: none;
+    }
+
+    ul.track_info_list {
+      font-size: 12px;
+
+      li.track_info_property {
+        display: block;
+        margin: 0 0 10px 0;
+
+        .track_info_key {
+          display: inline-block;;
+          width: 85px;
+          opacity: .4;
+        }
+        .track_info_value {
+          font-weight: 400;
+        }
+      }
+    }
+  }
+
+  .track_actions {
+    display: block;
+    margin: 15px;
+
+    li {
+      float: left;
+      margin: 10px 10px 0 0;
+    }
+  }
+
+  .track_player {
+    display: block;
+    position: absolute;
+    bottom: -5px;
+    left: 15px;
   }
 }
