--- a/frontend/app/styles/modules.scss
+++ b/frontend/app/styles/modules.scss
@@ -31,3 +31,4 @@
 @import "../pages/track/index/channels";
 @import "../pages/track/index/track_info";
 @import "../pages/track/index/track_sidebar";
+@import "../pages/track/index/player";
