--- a/frontend/app/styles/modules.scss
+++ b/frontend/app/styles/modules.scss
@@ -9,6 +9,7 @@
 @import "../components/pill/pill";
 @import "../components/player/progress_bar";
 @import "../components/player/player_controls";
+@import "../components/player/timeline";
 
 //Pages
 @import "../pages/landing/index";
