--- a/frontend/app/components/player/progress_bar.scss
+++ b/frontend/app/components/player/progress_bar.scss
@@ -2,7 +2,7 @@
 
 .progress_bar_player_container {
   display: block;
-  margin: 15px 0 20px 0;
+  // margin: 15px 0 20px 0;
 
   .player_top_bar {
     display: flex;
@@ -63,8 +63,8 @@
     left: 0;
     width: 100%;
     z-index: 1;
-    margin: 10px 0 0 0;
-    height: 60px;
+    margin: 11px 0 0 0;
+    height: 55px;
     opacity: 0.7;
     transition: opacity .15s ease-in-out;
   }
