--- a/frontend/app/components/player/progress_bar.scss
+++ b/frontend/app/components/player/progress_bar.scss
@@ -37,6 +37,7 @@
       top: 0;
       left: 0;
       z-index: 2;
+      box-shadow: 0px 2px 15px 0px rgba($black, 0.25);
     }
 
     .progress_bar_hover {
