--- a/frontend/app/pages/track/new/track_metadata.scss
+++ b/frontend/app/pages/track/new/track_metadata.scss
@@ -90,6 +90,26 @@
       }
     }
 
+    .new_track_player_container {
+      display: block;
+      margin: 15px 0 20px 0;
+
+      .player_top_bar {
+        display: flex;
+        justify-content: space-between;
+
+        .player_time_container {
+          font-size: 24px;
+          position: relative;
+          top: -2px;
+
+          .total_time, .time_divider {
+            opacity: .2;
+          }
+        }
+      }
+    }
+
     .selection_error {
       display: block;
       margin: 0 0 20px 0;
