--- a/frontend/app/components/header/header.scss
+++ b/frontend/app/components/header/header.scss
@@ -53,6 +53,7 @@ header.app_header {
             left: 0;
             background: $black;
             transition: height .1s ease-in-out;
+            box-shadow: 0px 0px 8px 0px rgba($black, 0.4);
           }
 
           &:hover {
