--- a/frontend/app/pages/track/index.scss
+++ b/frontend/app/pages/track/index.scss
@@ -1,5 +1,7 @@
 @import "../../styles/vars";
 
+$containerShadow: 0px 4px 28px 0px rgba($black, 0.04);
+
 .page_track {
   display: flex;
   position: absolute;
@@ -10,42 +12,39 @@
   overflow: hidden;
   flex-direction: column;
 
-  &.loading {
-    &:before {
-      content:'';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba($white, .5);
-      z-index: 10000;
-    }
-    &:after {
-      content:'Loading...';
-      background: $black;
-      color: $white;
-      z-index: 10001;
-      position: absolute;
-      bottom: 30px;
-      right: 30px;
-      padding: 10px 20px;
-    }
-  }
-
   .track_container {
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    overflow-y: scroll;
     width: 100%;
     height: 100%;
 
-    .track_content {
-      display: flex;
-      flex-grow: 1;
-      height: 100%;
-      flex-direction: column;
-      justify-content: space-between;
+    .track_page_content {
+      display: block;
+      width: 1180px;
+      margin: 0 auto;
+
+      .player_wrapper {
+        display: block;
+        height: 121px;
+      }
     }
+
+    // .track_content {
+    //   display: flex;
+    //   flex-grow: 1;
+    //   height: 100%;
+    //   flex-direction: column;
+    //   justify-content: space-between;
+    // }
+  }
+
+  .track_player {
+    display: block;
+    position: fixed;
+    bottom: -5px;
+    right: 15px;
+    z-index: 100;
   }
 }
