--- a/frontend/app/pages/track/index/track_info.scss
+++ b/frontend/app/pages/track/index/track_info.scss
@@ -1,7 +1,88 @@
 @import "../../../styles/vars";
 
-.info_container {
-  background: $white;
-  border-top: 1px solid $strokeColor;
-  height: 230px;
+.track_info_container {
+  display: flex;
+  justify-content: space-between;
+
+  .track_metadata {
+    display: flex;
+    margin: 0 0 0 25px;
+
+    .cover_container {
+      width: 100px;
+      height: 100px;
+      flex-shrink: 0;
+      margin: 0 15px 0 0;
+
+      img {
+        width: 100%;
+        box-shadow: 0px 2px 9px 0px rgba($black, 0.15);
+      }
+    }
+
+    .main_info_container {
+      flex-grow: 1;
+      margin: 7px 0 0 0;
+      line-height: 27px;
+
+      .artist_name {
+        font-size: 20px;
+        font-weight: 600;
+      }
+
+      .track_name {
+        font-size: 16px;
+        font-weight: 300;
+      }
+
+      .label_name {
+        font-size: 16px;
+        font-weight: 600;
+        opacity: .25;
+      }
+    }
+  }
+
+  .track_main_attributes {
+    display: block;
+    margin: 0 25px 0 0;
+    position: relative;
+
+    h1.genre {
+      display: inline-block;
+      background: $yellow;
+      font-size: 20px;
+      padding: 4px 15px;
+      font-family: 'Roboto', sans-serif;
+      font-weight: 500;
+      position: absolute;
+      top: 3px;
+      right: 0;
+      white-space: nowrap;
+    }
+
+    ul.track_info_list {
+      position: absolute;
+      top: 55px;
+      right: 0;
+      width: 600px;
+
+      li.track_info_property {
+        float: right;
+        width: 85px;
+
+        .track_info_key {
+          display: block;
+          text-transform: uppercase;
+          font-size: 10px;
+          opacity: .2;
+        }
+
+        .track_info_value {
+          font-size: 13px;
+          font-weight: 400;
+        }
+      }
+    }
+  }
 }
