--- a/frontend/app/pages/track/index/channels_content.scss
+++ b/frontend/app/pages/track/index/channels_content.scss
@@ -1,5 +1,10 @@
 @import "../../../styles/vars";
 
 .channels_content {
-  flex-grow: 1;
+  display: block;
+  padding: 0 0 25px 0;
+
+  .add_channel_button {
+    margin: 25px 0 0 25px;
+  }
 }
