--- a/frontend/app/pages/track/index/track_info.scss
+++ b/frontend/app/pages/track/index/track_info.scss
@@ -3,6 +3,8 @@
 .track_info_container {
   display: flex;
   justify-content: space-between;
+  height: 100px;
+  margin: 0 0 25px 0;
 
   .track_metadata {
     display: flex;
