--- a/frontend/app/styles/modules.scss
+++ b/frontend/app/styles/modules.scss
@@ -36,3 +36,4 @@
 @import "../pages/track/index/channels_content";
 @import "../pages/track/index/channels";
 @import "../pages/track/index/channel";
+@import "../pages/track/index/clip";
