--- a/frontend/app/pages/track/index/track_info.scss
+++ b/frontend/app/pages/track/index/track_info.scss
@@ -77,6 +77,7 @@
           display: block;
           text-transform: uppercase;
           font-size: 10px;
+          font-weight: 600;
           opacity: .2;
         }
 
