cursor and titles

--- a/frontend/app/pages/track/index.scss
+++ b/frontend/app/pages/track/index.scss
@@ -33,7 +33,7 @@ $containerShadow: 0px 4px 28px 0px rgba($black, 0.04);
   }
 
   .track_player {
-    display: block;
+    display: none;
     position: fixed;
     bottom: -5px;
     right: 15px;
