--- a/frontend/app/components/player/progress_bar.scss
+++ b/frontend/app/components/player/progress_bar.scss
@@ -50,7 +50,7 @@
     z-index: 2;
     margin: 11px 0 0 0;
     height: 55px;
-    opacity: 1;
+    opacity: 0.7;
     transition: opacity .15s ease-in-out;
   }
 
@@ -90,7 +90,7 @@
     }
 
     img {
-      opacity: .9
+      opacity: 1
     }
   }
 }
