--- a/frontend/app/components/player/timeline.scss
+++ b/frontend/app/components/player/timeline.scss
@@ -21,6 +21,31 @@
     box-shadow: 0px 2px 7px 0px rgba($black, 0.24);
   }
 
+  .range {
+    background: $black;
+    width: 100px;
+    color: $white;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20px;
+    line-height: 10px;
+    position: absolute;
+    top: 8px;
+    z-index: 2;
+    box-shadow: 0px 2px 7px 0px rgba($black, 0.24);
+
+    &.range_time_right {
+      margin: 0 0 0 -100px;
+    }
+
+    .range_total {
+      padding: 0 0 0 5px;
+      opacity: .5;
+    }
+  }
+
   .time_list {
     display: flex;
     height: 35px;
