--- a/frontend/app/pages/track/index/clip.scss
+++ b/frontend/app/pages/track/index/clip.scss
@@ -9,6 +9,13 @@
   left: 0;
   background: rgba($black, .1);
   border: 1px solid $black;
+  cursor: pointer;
+
+  &.selected_clip {
+    background: $black;
+    color: $white;
+    box-shadow: 0px 4px 20px 0px rgba($black,0.2);
+  }
 
   .clip_name {
     display: block;
