shitty keyboard play

--- a/frontend/app/pages/track/index/channel.scss
+++ b/frontend/app/pages/track/index/channel.scss
@@ -25,6 +25,7 @@
         margin: 14px 25px 0 10px;
         transition: background .2s ease-in-out;
         position: relative;
+        cursor: text;
       }
 
       .moments_timeline {
