--- a/frontend/app/pages/track/index/player.scss
+++ b/frontend/app/pages/track/index/player.scss
@@ -8,6 +8,7 @@
   border-bottom: 1px solid $strokeColor;
   position: relative;
   display: flex;
+  z-index: 100;
 
   &.player_fixed {
     position: fixed;
