--- a/frontend/app/styles/modules.scss
+++ b/frontend/app/styles/modules.scss
@@ -27,13 +27,12 @@
 
 // page /track/${id}
 @import "../pages/track/index";
-// @import "../pages/track/index/channels_info";
-// @import "../pages/track/index/track_sidebar";
-
 @import "../pages/track/index/analysis";
 @import "../pages/track/index/track_info";
 @import "../pages/track/index/player";
 @import "../pages/track/index/channels_content";
 @import "../pages/track/index/channels";
 @import "../pages/track/index/channel";
+@import "../pages/track/index/channel_details";
+@import "../pages/track/index/channel_details_form";
 @import "../pages/track/index/clip";
