--- a/frontend/app/pages/track/index/channel.scss
+++ b/frontend/app/pages/track/index/channel.scss
@@ -72,6 +72,22 @@ $channelHeight: 80px;
             white-space: nowrap;
             text-overflow: ellipsis;
           }
+
+          .channel_properties {
+            width: 100%;
+
+            .property {
+              display: inline-block;
+              padding: 3px 8px 3px 8px;
+              background: rgba($black, .07);
+              border-radius: 100px;
+              font-size: 10px;
+              margin: 0 5px 0 0;
+              font-weight: 400;
+              color: rgba($black, .5);
+
+            }
+          }
         }
 
         &:hover {
