--- a/frontend/app/styles/elements/input.scss
+++ b/frontend/app/styles/elements/input.scss
@@ -43,6 +43,13 @@ input.input {
   position: relative;
   margin: 0 0 15px 0;
 
+  .form_label {
+    display: block;
+    font-size: 12px;
+    font-weight: 500;
+    opacity: .35;
+  }
+
   .input_valid {
     display: block;
     position: absolute;
